# TextractAI

./: .flake8  .gitignore  .pre-commit-config.yaml  Instructions.txt  README.md  pyproject.toml  requirements-dev.txt  requirements.txt  setup_project.ps1
scripts/: verify_commit_msg.py
